--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^7.0.6",
     "@react-navigation/native": "^7.0.3",
     "@react-navigation/native-stack": "^7.1.0",
+    "@react-navigation/stack": "^7.0.6",
     "expo": "~52.0.9",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
